--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>minhthanh edit here</p>
+    adfaidjpofaijodsfajdsfp
+    adsfad
 </body>
 </html>
