--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-<<<<<<< main
   <signup></signup>
   <login>Login</login>
-=======
-  <signup>Signup</signup>
->>>>>>> signup2
 
-<<<<<<< main
   <div>Khang1</div>
-=======
-  <div>Khang2</div>
->>>>>>> signupK1
+  <div>hunglogin1</div>
 </body>
 </html>
