--- a/toDoApp/HTML/loginPage.html
+++ b/toDoApp/HTML/loginPage.html
@@ -78,17 +78,17 @@
         <h2>Login</h2>
             <div class="form-group">
                 <label for="username">Email or Username *</label>
-                <input type="text" id="username" name="username" onClick = myFunction() required>
+                <input type="text" id="username" name="username">
             </div>
             <div class="form-group">
                 <label for="password">Password *</label>
-                <input type="password" id="password" name="password" onClick = myFunction() required>
+                <input type="password" id="password" name="password">
             </div>
-            <button type="submit">Login</button>
+            <button type="button" id="submit-button">Login</button>
     
         </form>
     </div>
-    <script src="loginPage.js"></script>
+    <script src="../Script/loginPage.js"></script>
     </script>
 </body>
 </html>
