--- a/toDoApp/HTML/signupPage.html
+++ b/toDoApp/HTML/signupPage.html
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="container">
-        <form>
+        <form  >
         <h2>Login</h2>
         <p>Please fill in this form to create an account</p>
             <div class="form-group">
@@ -109,10 +109,10 @@
                 <input type="password" id="passwordConfirm" name="passwordConfirm">
                 <span class="form-message"></span>
             </div>
-            <button id="submit-button" type="submit">Signup</button>
+            <button id="submit-button" type="button">Signup</button>
     
         </form>
     </div>
-    <script src="../Script/signupPage.js"></script>
+    <script type="text/javascript" src="../Script/signupPage.js"></script>
 </body>
 </html>
