--- a/toDoApp/HTML/signupPage.html
+++ b/toDoApp/HTML/signupPage.html
@@ -82,7 +82,7 @@
 <body>
     <div class="container">
         <form  >
-        <h2>Login</h2>
+        <h2>Signup</h2>
         <p>Please fill in this form to create an account</p>
             <div class="form-group">
                 <label for="fullName">Full Name</label>
@@ -107,7 +107,6 @@
             <div class="form-group">
                 <label for="password">Confirm Your Password</label>
                 <input type="password" id="passwordConfirm" name="passwordConfirm">
-                <span class="form-message"></span>
             </div>
             <button id="submit-button" type="button">Signup</button>
     
