done chess board

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -11,6 +11,91 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="chessboard">
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width even">8</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width odd" >7</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width even" >6</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width odd" >5</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width even" >4</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width odd" >3</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width even" >2</p>
+            </div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block"></div>
+            <div class="chessboard__block">
+                <p class="order-block-width odd" >1</p>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
