update order chess board

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -83,14 +83,29 @@
             <div class="chessboard__block">
                 <p class="order-block-width even" >2</p>
             </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
             <div class="chessboard__block">
+                <p class="order-block-height even">a</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height odd">b</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height even">c</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height odd">d</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height even">e</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height odd">f</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height even">g</p>
+            </div>
+            <div class="chessboard__block">
+                <p class="order-block-height odd">h</p>
                 <p class="order-block-width odd" >1</p>
             </div>
         </div>
