--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="../assets/main.css">
     <link rel="stylesheet" href="../assets/board.css">
     <link rel="stylesheet" href="../assets/pieces.css">
+    <link rel="stylesheet" href="../assets/historyMove.css">
 </head>
 
 <body>
-    <div class="container">
+    <header class="header">
+
+    </header>
+
+
+    <div class="content">
+
+        <!-- chess board -->
         <div class="chessboard">
             <div class="chessboard__block"></div>
             <div class="chessboard__block"></div>
@@ -109,7 +118,23 @@
                 <p class="order-block-width odd" >1</p>
             </div>
         </div>
+
+
+        <div class="history-move">
+            <div class="history-move__time black-player">
+                <h1 class="time-stamp">04:54</h1>
+            </div>
+
+            <div class="history-move__time white-player">
+                <h1 class="time-stamp">02:18</h1>
+            </div>
+        </div>
     </div>
+
+
+    <footer class="footer">
+
+    </footer>
     
 </body>
 
