--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="../assets/main.css">
-    <link rel="stylesheet" href="../assets/board.css">
-    <link rel="stylesheet" href="../assets/pieces.css">
-    <link rel="stylesheet" href="../assets/historyMove.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/board.css">
+    <link rel="stylesheet" href="../assets/css/pieces.css">
+    <link rel="stylesheet" href="../assets/css/historyMove.css">
 </head>
 
 <body>
@@ -80,6 +80,7 @@
             <div class="chessboard__block"></div>
             <div class="chessboard__block"></div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
                 <p class="order-block-width odd" >3</p>
             </div>
             <div class="chessboard__block"></div>
