S231-9 | [UI/UX] Design pieces for the black side

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -22,24 +22,54 @@
 
         <!-- chess board -->
         <div class="chessboard">
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-rook pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-knight pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-bishop pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-queen pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-king pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-bishop pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-knight pieces black-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-rook pieces black-pieces"></i>
                 <p class="order-block-width even">8</p>
             </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces"></i>
                 <p class="order-block-width odd" >7</p>
             </div>
             <div class="chessboard__block"></div>
@@ -80,7 +110,6 @@
             <div class="chessboard__block"></div>
             <div class="chessboard__block"></div>
             <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
                 <p class="order-block-width odd" >3</p>
             </div>
             <div class="chessboard__block"></div>
