S231-8 | [UI/UX] Design pieces for the white side

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -112,38 +112,62 @@
             <div class="chessboard__block">
                 <p class="order-block-width odd" >3</p>
             </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block"> 
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
+            </div>
+            <div class="chessboard__block">
+                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
                 <p class="order-block-width even" >2</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-rook pieces white-pieces"></i>
                 <p class="order-block-height even">a</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-knight pieces white-pieces"></i>
                 <p class="order-block-height odd">b</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-bishop pieces white-pieces"></i>
                 <p class="order-block-height even">c</p>
             </div>
             <div class="chessboard__block">
                 <p class="order-block-height odd">d</p>
+                <i class="fa-regular fa-chess-queen pieces white-pieces"></i>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-king pieces white-pieces"></i>
                 <p class="order-block-height even">e</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-bishop pieces white-pieces"></i>
                 <p class="order-block-height odd">f</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-knight pieces white-pieces"></i>
                 <p class="order-block-height even">g</p>
             </div>
             <div class="chessboard__block">
+                <i class="fa-regular fa-chess-rook pieces white-pieces"></i>
                 <p class="order-block-height odd">h</p>
                 <p class="order-block-width odd" >1</p>
             </div>
