--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -14,7 +14,11 @@
 
 <body>
     <header class="header">
-
+        <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
+        <div class="header__nav">
+            <a class="login" href="./login.html" >Login</a>
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+        </div>
     </header>
 
 
