Design header main page

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -16,8 +16,9 @@
     <header class="header">
         <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
         <div class="header__nav">
-            <a class="login" href="./login.html" >Login</a>
-            <i class="fa-solid fa-ellipsis-vertical"></i>
+            <a class="accounts" href="./login.html" >Sign in</a>
+            <a class="accounts" href="./signUp.html" >Sign up</a>
+            <i class="fa-solid fa-ellipsis-vertical bars"></i>
         </div>
     </header>
 
