Add header, footer to sign in, sign up pages

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -14,9 +14,11 @@
 
 <body>
     <header class="header">
-        <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
+        <a href="./index.html" style="text-decoration: none;">
+            <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
+        </a>
         <div class="header__nav">
-            <a class="accounts" href="./login.html" >Sign in</a>
+            <a class="accounts" href="./signIn.html" >Sign in</a>
             <a class="accounts" href="./signUp.html" >Sign up</a>
             <i class="fa-solid fa-ellipsis-vertical bars"></i>
         </div>
