--- a/team1/chessGame/frontend/pages/signIn.html
+++ b/team1/chessGame/frontend/pages/signIn.html
@@ -13,18 +13,15 @@
             <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
         </a>
         <div class="header__nav">
-            <a class="accounts" href="./signIn.html" >Sign in</a>
+            <a class="accounts" href="./signUp.html" >Sign up</a>
             <i class="fa-solid fa-ellipsis-vertical bars"></i>
         </div>
     </header>
 
-    <div class="content">
-    </div>
+    <div class="content"></div>
 
     <footer class="footer">
         <h1 class="footer__create">By team 1 SET 2023</h1>
     </footer>
-
-
 </body>
 </html>
