--- a/chessGame/client/pages/board.html
+++ b/chessGame/client/pages/board.html
@@ -10,7 +10,7 @@
 <body>
     <div class="chessboard" id="chessBoard"></div>
 
-    <script src="../scripts/board.js"></script>
+    <script type="module" src="../scripts/board.js"></script>
 
 </body>
 </html>
