Handle conflict CSS when render chess board by javascript

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -25,171 +25,7 @@
     </header>
 
 
-    <div class="content">
-        <!-- chess board -->
-        <div class="chessboard">
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-rook pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-knight pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-bishop pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-queen pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-king pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-bishop pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-knight pieces black-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-rook pieces black-pieces"></i>
-                <p class="order-block-width even">8</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces"></i>
-                <p class="order-block-width odd" >7</p>
-            </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block">
-                <p class="order-block-width even" >6</p>
-            </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block">
-                <p class="order-block-width odd" >5</p>
-            </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block">
-                <p class="order-block-width even" >4</p>
-            </div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block"></div>
-            <div class="chessboard__block">
-                <p class="order-block-width odd" >3</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block"> 
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-pawn pieces white-pieces"></i>
-                <p class="order-block-width even" >2</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-rook pieces white-pieces"></i>
-                <p class="order-block-height even">a</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-knight pieces white-pieces"></i>
-                <p class="order-block-height odd">b</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-bishop pieces white-pieces"></i>
-                <p class="order-block-height even">c</p>
-            </div>
-            <div class="chessboard__block">
-                <p class="order-block-height odd">d</p>
-                <i class="fa-regular fa-chess-queen pieces white-pieces"></i>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-king pieces white-pieces"></i>
-                <p class="order-block-height even">e</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-bishop pieces white-pieces"></i>
-                <p class="order-block-height odd">f</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-knight pieces white-pieces"></i>
-                <p class="order-block-height even">g</p>
-            </div>
-            <div class="chessboard__block">
-                <i class="fa-regular fa-chess-rook pieces white-pieces"></i>
-                <p class="order-block-height odd">h</p>
-                <p class="order-block-width odd" >1</p>
-            </div>
-        </div>
-
-
-        <div class="history-move">
-            <div class="history-move__time black-player">
-                <h1 class="time-stamp">04:54</h1>
-            </div>
-
-            <div class="history-move__time white-player">
-                <h1 class="time-stamp">02:18</h1>
-            </div>
-        </div>
-    </div>
+    <div class="content" id="content" ></div>
 
 
     <footer class="footer">
@@ -197,5 +33,6 @@
     </footer>
     
 </body>
+<script src="../scripts/board.js"></script>
 
 </html>
