--- a/MinhThanh/chessGame/client/index.html
+++ b/MinhThanh/chessGame/client/index.html
@@ -91,10 +91,10 @@
           <li class="box" id="b108">white-castle</li>
         </div>
       </ul>
-      <h2 id="tog">White's turn</h2>
+      <h2 id="tog"></h2>
       <h2 id="reset-btn">Reset</h2>
     </div>
     <script src="pieces.js"></script>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
