Done CSS current position and prettier code

--- a/chessGame/client/pages/board.html
+++ b/chessGame/client/pages/board.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../styles/global.css" />
+        <link rel="stylesheet" href="../styles/board.css" />
+    </head>
 
-    <link rel="stylesheet" href="../styles/board.css"/>
-</head>
+    <body>
+        <div class="chessboard" id="chessBoard"></div>
 
-<body>
-    <div class="chessboard" id="chessBoard"></div>
-
-    <script type="module" src="../scripts/board.js"></script>
-
-</body>
+        <script type="module" src="../scripts/board.js"></script>
+    </body>
 </html>
