Fix cursor pieces

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -34,6 +34,7 @@
     
 </body>
 <script src="../scripts/board.js"></script>
+<script src="../scripts/piece.js"></script>
 <script src="../scripts/historyMove.js"></script>
 
 </html>
