--- a/chessGame/client/pages/board.html
+++ b/chessGame/client/pages/board.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="chessboard" id="chessBoard"></div>
+        <div class="chessBoard" id="chessBoard"></div>
 
         <script type="module" src="../scripts/board.js"></script>
     </body>
