Split to module handle function (Board)

--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -33,7 +33,13 @@
     </footer>
     
 </body>
-<script src="../scripts/board.js"></script>
+<!-- <script src="../scripts/board.js"></script> -->
+<script src="../scripts/board/showValidMove.js" ></script>
+<script src="../scripts/board/movePiece.js" ></script>
+<script src="../scripts/board/renderChessBoard.js"></script>
+<script src="../scripts/board/generateBlock.js" ></script>
+<script src="../scripts/board/isCheckKing.js" ></script>
+<script src="../scripts/board/index.js" ></script>
 <script src="../scripts/piece.js"></script>
 <script src="../scripts/historyMove.js"></script>
 
