--- a/team1/chessGame/frontend/pages/signUp.html
+++ b/team1/chessGame/frontend/pages/signUp.html
@@ -1,30 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sign Up</title>
+
+    <!-- Bootstap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet" />
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html" style="text-decoration: none;">
-            <i class="fa-solid fa-chess-board header__logo-chess-game"></i>
-        </a>
-        <div class="header__nav">
-            <a class="accounts" href="./signIn.html" >Sign in</a>
-            <i class="fa-solid fa-ellipsis-vertical bars"></i>
+    <div class="signup-layout">
+        <div class="signup-content-layout">
+            <div class="signup-form">
+                <div class="signup-title">
+                    <p>Sign Up</p>
+                </div>
+                <form class="row g-3">
+                    <div class="col-md-6">
+                        <label for="firstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Enter your first name" />
+                        <span class="input-error"></span>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="lastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Enter your last name" />
+                        <span class="input-error"></span>
+                    </div>
+                    <div class="col-12">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email" />
+                        <span class="input-error"></span>
+                    </div>
+                    <div class="col-12">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder=". . . . . . ." />
+                        <span class="input-error"></span>
+                    </div>
+                    <div class="col-12">
+                        <label for="confirm" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirm" placeholder=". . . . . . ." />
+                        <span class="input-error"></span>
+                    </div>
+                    <div class="d-flex" style="justify-content: center">
+                        <button type="submit" id="btn-register" class="signup-btn">
+                            <span class="signup-btn-text">Sign Up</span>
+                        </button>
+                    </div>
+                    <p style="text-align: center">
+                        <span class="text">Already have an account? </span>
+                        <a href="/signin.html"><span class="blue-text"> Log in</span></a>
+                    </p>
+                </form>
+            </div>
         </div>
-    </header>
-
-    <div class="content">
     </div>
-
-    <footer class="footer">
-        <h1 class="footer__create">By team 1 SET 2023</h1>
-    </footer>
-
-
+    <script src="./validate-signup.js"></script>
 </body>
 </html>
