--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -39,6 +39,10 @@
 <script src="../scripts/board/showValidMove/logicShowMove.js" ></script>
 <script src="../scripts/board/showValidMove/pieces/handleQueen.js"></script>
 <script src="../scripts/board/showValidMove/pieces/handleKing.js"></script>
+<script src="../scripts/board/showValidMove/pieces/handleBishop.js"></script>
+<script src="../scripts/board/showValidMove/pieces/handleKnight.js"></script>
+<script src="../scripts/board/showValidMove/pieces/handleRook.js"></script>
+<script src="../scripts/board/showValidMove/pieces/handlePawn.js"></script>
 <script src="../scripts/board/showValidMove/showValidMove.js" ></script>
 <script src="../scripts/board/movePiece.js" ></script>
 <script src="../scripts/board/renderChessBoard.js"></script>
