--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -51,5 +51,5 @@
 <script src="../scripts/board/index.js" ></script>
 <script src="../scripts/piece.js"></script>
 <script src="../scripts/historyMove.js"></script>
-
+<script src="../scripts/board/countTime.js"></script>
 </html>
