--- a/team1/chessGame/frontend/pages/index.html
+++ b/team1/chessGame/frontend/pages/index.html
@@ -44,6 +44,7 @@
 <script src="../scripts/board/showValidMove/pieces/handleRook.js"></script>
 <script src="../scripts/board/showValidMove/pieces/handlePawn.js"></script>
 <script src="../scripts/board/showValidMove/showValidMove.js" ></script>
+<script src="../scripts/board/promotePawn.js" ></script>
 <script src="../scripts/board/movePiece.js" ></script>
 <script src="../scripts/board/renderChessBoard.js"></script>
 <script src="../scripts/board/generateBlock.js" ></script>
