--- a/team1/chessGame/frontend/pages/signIn.html
+++ b/team1/chessGame/frontend/pages/signIn.html
@@ -1,61 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <!-- Bootstap 5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
-  <!-- Bootstap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
 
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <link href="https://fonts.googleapis.com/css2?family=Alata&family=Quicksand:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet" />
-</head>
-
-<body>
-  <div class="login-layout">
-    <div class="login-content-layout">
-      <div class="login-form">
-        <div class="login-title">Login</div>
-        <div class="mb-3">
-          <label for="email" class="login-text mb-2">Email</label>
-          <input type="email" class="form-control w-full" id="email" aria-describedby="emailHelp" />
-          <span class="input-error"></span>
+  <body>
+    <div class="login-layout">
+      <div class="login-content-layout">
+        <div class="login-form">
+          <div class="login-title">Login</div>
+          <div class="mb-3">
+            <label for="email" class="login-text mb-2">Email</label>
+            <input
+              type="email"
+              class="form-control w-full"
+              id="email"
+              aria-describedby="emailHelp"
+            />
+            <span class="input-error"></span>
+          </div>
+          <div class="mb-3">
+            <label
+              for="password"
+              class="login-text mb-2"
+              style="display: flex; justify-content: space-between"
+              >Password
+              <a href="#" class="forgot-password"> Forgot password?</a></label
+            >
+            <input
+              type="password"
+              class="form-control w-full"
+              id="password"
+              placeholder=". . . . . . "
+            />
+            <span class="input-error"></span>
+          </div>
+          <div class="mb-3 form-check">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              id="exampleCheck1"
+            />
+            <label class="login-check-text" for="exampleCheck1"
+              >Remenber Me</label
+            >
+          </div>
+          <div class="d-flex" style="justify-content: center">
+            <button type="submit" id="btn-login" class="login-btn">
+              <span class="login-btn-text">Login</span>
+            </button>
+          </div>
+          <p style="text-align: center">
+            <span class="text">You don't have an account? </span
+            ><a href="./signUp.html"><span class="blue-text"> Sign Up</span></a>
+          </p>
         </div>
-        <div class="mb-3">
-          <label for="password" class="login-text mb-2" style="display: flex; justify-content: space-between">Password
-            <a href="#" class="forgot-password"> Forgot password?</a></label>
-          <input type="password" class="form-control w-full" id="password" placeholder=". . . . . . " />
-          <span class="input-error"></span>
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-          <label class="login-check-text" for="exampleCheck1">Remenber Me</label>
-        </div>
-        <div class="d-flex" style="justify-content: center;">
-          <button type="submit" id="btn-login" class="login-btn">
-            <span class="login-btn-text">Login</span>
-          </button>
-        </div>
-        <p style="text-align: center;">
-          <span class="text">You don't have an account? </span><a href="./signup.html"><span class="blue-text"> Sign
-              Up</span></a>
-        </p>
       </div>
     </div>
-  </div>
-  <script src="./validate-signin.js"></script>
-</body>
-
+    <script src="./validate-signin.js"></script>
+  </body>
 </html>
