--- a/team1/chessGame/frontend/pages/signIn.html
+++ b/team1/chessGame/frontend/pages/signIn.html
@@ -71,7 +71,7 @@
               id="exampleCheck1"
             />
             <label class="login-check-text" for="exampleCheck1"
-              >Remenber Me</label
+              >Remember Me</label
             >
           </div>
           <div class="d-flex" style="justify-content: center">
